@@ -9,21 +9,17 @@ import java.util.*;
 
 public class Restaurant {
 
-    public static final long RES_DURATION_SEC = 60 * 90;    // 1.5 hours is the reservation time
-
-    /* ───────── state ───────── */
     private final AdjacencyMatrix<Table> tables;
     private final List<Reservation> reservations;
-
-    /** 2‑dim index: 0..2*maxGroupSize (even=no baby, odd=baby) */
     private final ComparableQueue<Group>[] queues;
     private final HeapMax<ComparableQueue<Group>> queuesHeap;
 
-    /* memoized data */
-    private List<Table> fullTableList = null;
+    private List<Table> fullTablesList = null;
     private int minSeatsPrecalculated = 0;
 
-    @SuppressWarnings("unchecked")
+    /** 2 hours in seconds */
+    public static final long RES_DURATION_SEC = (long)(60 * 60 * 1.5);
+
     public Restaurant(int maxGroupSize,
                       AdjacencyMatrix<Table> tablesMatrix,
                       List<Reservation> reservationsList) {
@@ -32,19 +28,19 @@ public class Restaurant {
         this.reservations  = new ArrayList<>(reservationsList);
 
         // build queue array
-        int buckets = 2 * maxGroupSize + 1;
-        queues = new ComparableQueue[buckets];
-        for (int i = 0; i < buckets; i++) queues[i] = new ComparableQueue<>();
+        int queuesNumber = 2 * maxGroupSize + 1;
+        queues = new ComparableQueue[queuesNumber];
+        for (int i = 0; i < queuesNumber; i++) queues[i] = new ComparableQueue<>();
 
         // build maxHeap and add queues
         queuesHeap = new HeapMax<>();
         for (ComparableQueue<Group> q : queues) queuesHeap.add(q);
 
-        // pre‑assign any reservations
         assignReservations();
-        handleReservations();   // seat those that start immediately
+        handleReservations();
     }
 
+    /** Adds a walk-in group to the correct queue bucket. */
     public boolean addGroupToQueue(Group group) {
         int index = 2 * group.getPeople() + (group.hasBaby() ? 1 : 0);
         if (index >= queues.length || group.getPeople() == 0) return false;
@@ -53,148 +49,174 @@ public class Restaurant {
         return true;
     }
 
-    /* ===============================================================
-       MAIN TICK HANDLERS
-       ============================================================== */
-
     public void handleQueues() {
-        if (queuesHeap.isEmpty()) return;
+        Table assigned = null;
+        Stack<ComparableQueue<Group>> stack = new Stack<>();
 
-        Table table = null;
-        Stack<ComparableQueue<Group>> popped = new Stack<>();
-
-        while (table == null && !queuesHeap.isEmpty()) {
-            ComparableQueue<Group> q = queuesHeap.DeleteMax();
-            popped.push(q);
-
+        // till we have a queue to handle
+        while (assigned == null && !queuesHeap.isEmpty()) {
+            ComparableQueue<Group> q = queuesHeap.popMax();
+            stack.push(q);
             if (!q.isEmpty()) {
-                Group g = q.peek();
-                table = getBestTable(g);
-                if (table != null) {
-                    table.occupy();
-                    q.poll();                       // dequeue
+                Group next = q.peek();
+                assigned = getBestTable(next);
+                if (assigned != null) {
+                    q.remove();  // seat it
                 }
             }
         }
-        while (!popped.isEmpty()) queuesHeap.Add(popped.pop());
+        // occupy and return queues to heap
+        if (assigned != null) {
+            assigned.occupy();
+        }
+        while (!stack.isEmpty()) {
+            queuesHeap.add(stack.pop());
+        }
     }
 
+    /** Second pass: when time arrives, occupy reserved tables and remove past reservations. */
     public void handleReservations() {
-        if (reservations.isEmpty()) return;
-
-        List<Reservation> done = new ArrayList<>();
+        List<Reservation> toRemove = new ArrayList<>();
+        long now = Clock.getTime();
         for (Reservation r : reservations) {
-            if (Clock.getTime() >= r.startTime() && r.table() != null) {
-                r.table().occupy();
-                r.table().unReserve(r);
-                done.add(r);
+            if (r.getTable() != null && now >= r.getStartTime()) {
+                r.getTable().occupy();
+                r.getTable().unReserve(r);
+                toRemove.add(r);
             }
         }
-        reservations.removeAll(done);
+        reservations.removeAll(toRemove);
     }
 
-    /* ===============================================================
-       INTERNAL TABLE SEARCH
-       ============================================================== */
 
-    private Table[] baseTables() { return tables.getArray(); }
-
-    private List<Table> allTableCombos(int minSeats) {
-        if (fullTableList != null && minSeats >= minSeatsPrecalculated)
-            return fullTableList;
-
-        List<Table> combos = new ArrayList<>();
-        for (Table t : baseTables()) dfsCombos(t, new ArrayList<>(), combos, minSeats);
-        fullTableList = combos;
-        minSeatsPrecalculated = minSeats;
-        return combos;
-    }
-
-    private void dfsCombos(Table t, List<Table> current,
-                           List<Table> out, int minSeats) {
-
-        if (current.contains(t)) return;
-        current.add(t);
-
-        if (current.size() > 1) {
-            TableCluster cluster = new TableCluster(current.toArray(new Table[0]));
-            if (cluster.seats() >= minSeats && !duplicate(out, cluster)) out.add(cluster);
-        }
-        for (Table adj : tables.getAdjacent(t))
-            dfsCombos(adj, new ArrayList<>(current), out, minSeats);
-    }
-
-    private boolean duplicate(List<Table> list, TableCluster c) {
-        for (Table tbl : list)
-            if (tbl instanceof TableCluster tc && tc.isEqual(c)) return true;
-        return false;
-    }
-
-    private Table getBestTable(Group g) {
-        Table t = scoreBest(g, Arrays.asList(baseTables()));
+    public Table getBestTable(Group group) {
+        Table t = findBestTableFromIterable(group, List.of(getBaseTablesArray()));
         if (t != null) return t;
-        return scoreBest(g, allTableCombos(g.people()));
+        return findBestTableFromIterable(group, getTablesList(group.getPeople(), false));
     }
 
-    private Table scoreBest(Group g, Iterable<Table> candidates) {
-        int best = 0;
-        Table res = null;
-        for (Table t : candidates) {
-            if (!fits(g, t)) continue;
-            int score = computeScore(g, t);
-            if (score > best) {
-                best = score;
-                res  = t;
+
+    /** Returns the base (single) tables array. */
+    public Table[] getBaseTablesArray() {
+        return tables.getArray();
+    }
+    /** Returns a flat list of all groups currently in all queues. */
+    public List<Group> getGroups() {
+        List<Group> all = new ArrayList<>();
+        for (ComparableQueue<Group> q : queues) {
+            all.addAll(q);
+        }
+        return all;
+    }
+
+    /**
+     * Finds the highest-scoring table from the given iterable.
+     * Scoring discourages wasted seats, wrong location, unneeded baby-seats, and clusters.
+     */
+    public Table findBestTableFromIterable(Group group, Iterable<Table> allTables) {
+        Table best = null;
+        int    maxScore = Integer.MIN_VALUE;
+
+        for (Table t : allTables) {
+            boolean valid = t.getSeats() >= group.getPeople()
+                    && (!group.hasBaby() || t.hasBabySeat())
+                    && !t.isOccupied()
+                    && !t.isReserved(Clock.getTime());
+
+            int score = 0;
+            if (valid) {
+                score = (group.getPeople() == t.getSeats() ? 100
+                        : 100 - (t.getSeats() - group.getPeople()))
+                        + (t.isInside() == group.isPrefersInside() ? 1 : 0)
+                        + (!group.hasBaby() && t.hasBabySeat() ? -1 : 0)
+                        + (t.isCluster() ? -3 : 0);
+            }
+            if (score > maxScore) {
+                maxScore = score;
+                best     = t;
             }
         }
-        return res;
+        return best;
     }
 
-    /* score & fit helpers */
-    private boolean fits(Group g, Table t) {
-        return t.seats() >= g.people()
-                && !(g.hasBaby() && !t.hasBabySeat())
-                && !t.isOccupied()
-                && !t.isReserved(Clock.getTime());
-    }
-    private int computeScore(Group g, Table t) {
-        int waste = t.seats() - g.people();
-        return 100 - waste
-                + (t.isInside() == g.prefersInside() ? 1 : 0)
-                - (!g.hasBaby() && t.hasBabySeat() ? 1 : 0)
-                - (t instanceof TableCluster ? 3 : 0);
-    }
-
-    /* ===============================================================
-       RESERVATION ASSIGNER
-       ============================================================== */
-
+    /** First pass: try to seat reservations at their requested time, delaying if needed. */
     private void assignReservations() {
-        for (Reservation r : reservations) assignSingleReservation(r);
-    }
+        long originalTime = Clock.getTime();
 
-    private void assignSingleReservation(Reservation r) {
-        long original = Clock.getTime();
-        int   delayed = 0;
+        for (Reservation r : reservations) {
+            if (r.getTable() == null) {
+                int delayedSeconds = 0;
 
-        while (r.table() == null) {
-            Clock.setTime(r.startTime());
-            Table t = getBestTable(r.group());
-            if (t != null) {
-                r.reserveTable(t);
-                break;
+                // try seating at the requested time, then retry every 20m
+                while (r.getTable() == null) {
+                    Clock.setTime(r.getStartTime());
+                    Table t = getBestTable(r.getGroup());
+                    if (t != null) {
+                        r.reserveTable(t);
+                    } else {
+                        r.delay(1200);
+                        delayedSeconds +=1200;
+                    }
+                }
+
+                // if we ever delayed, notify the user
+//                if (delayedSeconds > 0) {
+//                    int delayedMinutes = delayedSeconds / 60;
+//                    Platform.runLater(() -> {
+//                        Alert alert = new Alert(Alert.AlertType.INFORMATION);
+//                        alert.setHeaderText("Reservation delayed by " + delayedMinutes + " minutes");
+//                        alert.setContentText(r.toString());
+//                        alert.show();
+//                    });
+//                }
             }
-            r.delay(1800);           // push 30 min
-            delayed += 1800;
         }
-        if (delayed > 0) {
-            JOptionPane.showMessageDialog(null,
-                    "Reservation delayed by " + delayed/60 + " minutes\n" + r);
-        }
-        Clock.setTime(original);
+
+        // restore clock
+        Clock.setTime(originalTime);
     }
-    public void addReservation(Reservation r) {
-        reservations.add(r);
-        assignSingleReservation(r);
+
+    public List<Table> getTablesList(int minSeatsForGroups, boolean forceRecalculation) {
+        if (!forceRecalculation && fullTablesList != null && minSeatsForGroups >= minSeatsPrecalculated)
+            return fullTablesList;
+        List<Table> result = new ArrayList<>();
+        for (Table table : getBaseTablesArray()) {
+            makeTableCombos(table, new ArrayList<>(), result, minSeatsForGroups);
+        }
+        fullTablesList = result;
+        minSeatsPrecalculated = minSeatsForGroups;
+        return result;
+    }
+
+
+    /** Expose current reservations list for UI binding. */
+    public List<Reservation> getReservations() {
+        return reservations;
+    }
+
+    /** Recursively build all table-cluster combinations of size ≥ minSeats. */
+    private void makeTableCombos(Table table,
+                                 List<Table> currentList,
+                                 List<Table> clusterList,
+                                 int minSeats) {
+        if (currentList.contains(table)) return;
+
+        currentList.add(table);
+        if (currentList.size() > 1) {
+            TableCluster cluster = new TableCluster(currentList.toArray(new Table[0]));
+            if (cluster.getSeats() >= minSeats) {
+                boolean isDup = clusterList.stream()
+                        .filter(TableCluster.class::isInstance)
+                        .map(TableCluster.class::cast)
+                        .anyMatch(existing -> existing.isEqual(cluster));
+                if (!isDup) {
+                    clusterList.add(cluster);
+                }
+            }
+        }
+        // recurse on neighbors
+        for (Table adj : tables.getAdjacent(table)) {
+            makeTableCombos(adj, new ArrayList<>(currentList), clusterList, minSeats);
+        }
     }
 }
